--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["David Pritchard <david.al.pritchard@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+PyYAML = "^6.0"
 
 [tool.poetry.dev-dependencies]
 
