add pytz to dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["David Pritchard <david.al.pritchard@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 PyYAML = "^6.0"
+pytz = "^2022.1"
 
 [tool.poetry.dev-dependencies]
 
