--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pytz = "^2022.1"
 jira = "^3.3.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
