--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "jira-worklog"
+name = "jiraworklog"
 version = "0.1.0"
 description = ""
 authors = ["David Pritchard <david.al.pritchard@gmail.com>"]
