--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ jira = "^3.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
+deepdiff = "^5.8.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
