--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.9"
 PyYAML = "^6.0"
 pytz = "^2022.1"
 jira = "^3.3.0"
+Cerberus = "^1.3.4"
+openpyxl = "^3.0.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
