--- a/tests/data/02-add-to-empty/config.yaml
+++ b/tests/data/02-add-to-empty/config.yaml
@@ -3,13 +3,13 @@ author: "Daffy Duck"
 authentication:
   server: "https://runway.atlassian.net"
   user: "daffy@runway.com"
-  api_token: 'J6ab6YMa1HVWADNOmO6TC623'
+  api_token: "J6ab6YMa1HVWADNOmO6TC623"
 
 issues_map:
   p1: "P01"
   p2: "P02"
 
-timezone: 'US/Eastern'
+timezone: "US/Eastern"
 
 checked_in_path: null
 
