--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pytz = "^2022.1"
 jira = "^3.3.0"
 Cerberus = "^1.3.4"
 openpyxl = "^3.0.10"
+prettyprinter = "^0.18.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
