move bin/jiraworklog to become a Setuptools entry point

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,10 @@ deepdiff = "^5.8.1"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+# Define an "entry point", i.e. a shim script that gets placed into `bin` and
+# calls jiraworklog.application.main(). See the following for details:
+# https://python-poetry.org/docs/pyproject/#scripts
+# https://python-packaging.readthedocs.io/en/latest/command-line-scripts.html#the-console-scripts-entry-point
+[tool.poetry.scripts]
+jiraworklog = 'jiraworklog.application:main'
