--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,19 @@
 [tool.poetry]
 name = "jiraworklog"
 version = "0.1.0"
-description = ""
+description = "Command-line application to synchronize local worklog records with a Jira server"
 authors = ["David Pritchard <david.al.pritchard@gmail.com>"]
+readme = "README.md"
+repository = "https://github.com/dapritchard/jiraworklog"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-PyYAML = "^6.0"
-pytz = "^2022.1"
-jira = "^3.3.0"
-Cerberus = "^1.3.4"
-openpyxl = "^3.0.10"
-prettyprinter = "^0.18.0"
+PyYAML = ">= 6.0"
+pytz = ">= 2022.1"
+jira = ">= 3.3.0"
+Cerberus = ">= 1.3.4"
+openpyxl = ">= 3.0.10"
+prettyprinter = ">= 0.18.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
